k8s/java-app-example-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: java-app
  labels:
    app: java-app
    app.kubernetes.io/component: java-app
    app.kubernetes.io/instance: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: default-route-openshift-image-registry.apps.amosdsohiodev.amosonline.io/tekton-pipelines/testing:0.0.3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
